<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramdhany.ari.studycase.FormActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/textHeader"
        android:textAlignment="center"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tTempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/TextTmpt"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tTempat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/textMenu" />

    <TextView
        android:id="@+id/Makanan"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/tMakan"
        android:textAlignment="center"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tPorsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_centerVertical="true"
        android:text="@string/tPorsi" />

    <TextView
        android:id="@+id/tJumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tPorsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textSize="23sp"
        android:text="@string/tJumlah" />

    <TextView
        android:id="@+id/tHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tJumlah"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/tHarga" />

    <TextView
        android:id="@+id/tNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tHarga"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/tNom"
        android:textSize="23sp" />


</RelativeLayout>
