<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramdhany.ari.studycase.FormActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/textHeader"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/textHeader2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="65dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/editText1"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextJmlh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_main"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:hint="@string/editText2"
        android:padding="8dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/editTextJmlh"
        android:layout_alignStart="@+id/editTextJmlh"
        android:layout_below="@+id/editTextJmlh"
        android:layout_marginTop="18dp"
        android:background="@color/colorAccent"
        android:onClick="EatBus"
        android:text="@string/btn1"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignEnd="@+id/editTextJmlh"
        android:layout_alignRight="@+id/editTextJmlh"
        android:background="@color/colorAccent"
        android:onClick="Abnormal"
        android:text="@string/btn2"
        android:textColor="#ffffff" />



</RelativeLayout>
